Include exempt roles

--- a/gui/app/templates/_moderation.html
+++ b/gui/app/templates/_moderation.html
@@ -22,13 +22,33 @@
         <div class="content-block-body">
           <div class="title-toggle-button-container">
             <div class="moderation-feature-title">Spam Raid Protection</div>
+            <div class="muted" style="margin-top: 5px;">
+              These are settings for the chat messages that the bot will save <span style="font-weight: 900">before</span> the spam raid protection command is activated.
+            </div>
+          </div>
+          <div style="margin-top: 15px;">
+            <div style="font-weight: 600;font-size: 16px;width: 100%;margin-bottom: 10px;">
+              Exempt Roles <tooltip text="'These roles are exempt from the spam raid protection.'" />
+            </div>
+            <div class="role-bar" ng-repeat="role in getExemptRoles('spamRaidProtection') track by role.id">
+              <span>{{role.name}}</span>
+              <span class="clickable" style="padding-left: 10px;" ng-click="removeExemptRole('spamRaidProtection', role.id)" uib-tooltip="Remove role" tooltip-append-to-body="true">
+                <i class="far fa-times"></i>
+              </span>
+            </div>
+            <div class="role-bar clickable" ng-click="openAddExemptRoleModal('spamRaidProtection')" uib-tooltip="Add role" tooltip-append-to-body="true">
+              <i class="far fa-plus"></i>
+            </div>
           </div>
           <div style="margin-top: 15px">
-            <div class="muted" style="margin-bottom: 10px; margin-left: 15px;">
-              This will tell Firebot how many of the last chat messages it should check for.
+            <div style="font-weight: 600;font-size: 16px;width: 100%;margin-bottom: 10px;">
+              Message cache size
+            </div>
+            <div class="muted" style="margin-bottom: 10px;">
+              This will tell Firebot how many of the last chat messages it should save.
             </div>
             <firebot-input
-              input-title="Amount of messages to check"
+              input-title="Amount of messages to save"
               placeholder-text="Enter the amount of messages"
               input-type="number"
               disable-variables="true"
@@ -37,11 +57,14 @@
             />
           </div>
           <div style="margin-top: 20px">
-            <div class="muted" style="margin-bottom: 10px; margin-left: 15px;">
-              This is the amount of characters it should ignore at the start of the spam raid message (e.g. 10 of "spam raid message xxx" would make it only check for "raid message xxx").
+            <div style="font-weight: 600;font-size: 16px;width: 100%;margin-bottom: 10px;">
+              Message start cut-off
+            </div>
+            <div class="muted" style="margin-bottom: 10px;">
+              This is the amount of characters it should cut off the start of the spam raid message (e.g. 10 of "spam raid message xxx" would make it only check for "raid message xxx").
             </div>
             <firebot-input
-              input-title="Amount of characters to check"
+              input-title="Amount of characters"
               placeholder-text="Enter the amount of characters"
               input-type="number"
               disable-variables="true"
