Begin implementation of item groups

--- a/gui/app/templates/_channel-rewards.html
+++ b/gui/app/templates/_channel-rewards.html
@@ -14,6 +14,9 @@
   test-button="true"
   on-test-button-clicked="channelRewardsService.manuallyTriggerReward(itemId)"
   status-field="twitchData.isEnabled"
+  item-plural-label="Channel Rewards"
+  item-singular-label="Channel Reward"
+  groups="true"
 >
   <fb-item-table-toolbar>
     <button
