Make characterLimit optional in the backend

--- a/gui/app/templates/_moderation.html
+++ b/gui/app/templates/_moderation.html
@@ -25,10 +25,10 @@
           </div>
           <div style="margin-top: 15px">
             <div style="font-weight: 600;font-size: 16px;width: 100%;margin-bottom: 10px;">
-              Message cache size (145 max)
+              Message cache size
             </div>
             <div class="muted" style="margin-bottom: 10px;">
-              This will tell Firebot how many of the last chat messages it should save.
+              This will tell Firebot how many of the last chat messages it should save (145 max).
             </div>
             <firebot-input
               input-title="Amount of messages to save"
@@ -47,7 +47,7 @@
               Message start cut-off
             </div>
             <div class="muted" style="margin-bottom: 10px;">
-              This is the amount of characters it should cut off the start of the spam raid message (e.g. 10 of "spam raid message xxx" would make it only check for "raid message xxx").
+              This is the amount of characters it should cut off the start of the spam raid message (e.g. 10 of "spam raid message xxx" would make it only check for "raid message xxx"). Leave empty to turn off.
             </div>
             <firebot-input
               input-title="Amount of characters"
