Add a chat notification feed item

--- a/gui/app/templates/chat/_chat-messages.html
+++ b/gui/app/templates/chat/_chat-messages.html
@@ -105,6 +105,10 @@
             ng-if="chatItem.type === 'alert'"
             message="chatItem.data"
           />
+          <chat-notification
+            ng-if="chatItem.type === 'notification'"
+            message="chatItem.data"
+          />
         </div>
       </div>
     </div>
