--- a/gui/scss/Light.scss
+++ b/gui/scss/Light.scss
@@ -154,7 +154,7 @@ $sys-cmd-expanded-shadow: 3px 3px 5px -2px #dedede;
 
 $integration-row-bg: #f3f5f5;
 
-// Import Core Styles
+// Import Styles
 @import './core/$importer';
-
+@import './directives/$importer';
 
