--- a/gui/scss/Midnight.scss
+++ b/gui/scss/Midnight.scss
@@ -157,6 +157,5 @@ $integration-row-bg: #2a2f42;
     border: 1px solid #2a2f42;
 }
 
-// Import Styles
+// Import Core Styles
 @import './core/$importer';
-@import './directives/$importer';
