Add information to the chat UI when chat is autodisconnected

--- a/gui/app/templates/chat/_chat-messages.html
+++ b/gui/app/templates/chat/_chat-messages.html
@@ -107,6 +107,9 @@
           />
         </div>
       </div>
+      <div class="chat-autodisconnected" ng-show="cms.autodisconnected">
+        Disconnected from chat, trying to reconnect...
+      </div>
     </div>
     <div class="text-input-wrapper">
       <div
