--- a/gui/scss/core/_chat.scss
+++ b/gui/scss/core/_chat.scss
@@ -744,7 +744,7 @@
 
 .chat-autodisconnected {
     position: absolute;
-    bottom: -10px;
+    bottom: 0;
     width: 100%;
     background: rgba(0, 0, 0, 0.6);
     padding: 10px;
