Increase blue button > white text contrast

--- a/gui/scss/core/_bootstrap-overrides.scss
+++ b/gui/scss/core/_bootstrap-overrides.scss
@@ -197,7 +197,7 @@ textarea.form-control {
 }
 
 .btn-primary {
-    background-color: #2aa1c0;
+    background-color: #16809c;
     border-color: transparent;
     &:hover {
         background-color: #1f849e;
