--- a/gui/scss/core/_effects.scss
+++ b/gui/scss/core/_effects.scss
@@ -104,7 +104,7 @@
     background-image: none;
     border: 1px solid transparent;
     border-radius: 5px;
-    background: #2AA1C0;
+    background: #16809c;
     text-transform: uppercase;
 }
 
