--- a/gui/scss/core/_global.scss
+++ b/gui/scss/core/_global.scss
@@ -1681,7 +1681,7 @@ thead th{
 }
 
 .effect-bar {
-  background: #2aa1c0 - 15%;
+  background: #16809c;
   width: 100%;
   display: flex;
   flex-direction: row;
