--- a/gui/app/templates/chat/_commands.html
+++ b/gui/app/templates/chat/_commands.html
@@ -121,7 +121,7 @@
             >
               <td style="text-align: center">
                 <span
-                  style="color: #2aa1c0; font-size: 20px"
+                  style="color: #16809c; font-size: 20px"
                   ng-click="manuallyTriggerCommand(command.id)"
                 >
                   <i class="fas fa-play-circle clickable"></i>
