--- a/gui/app/templates/live-events/_events.html
+++ b/gui/app/templates/live-events/_events.html
@@ -276,7 +276,7 @@
                 >
                   <td style="text-align: center">
                     <span
-                      style="color: #2aa1c0; font-size: 20px"
+                      style="color: #16809c; font-size: 20px"
                       ng-click="fireEventManually(event)"
                     >
                       <i class="fas fa-play-circle clickable"></i>
