Fix styling for settings modals

--- a/gui/scss/Light.scss
+++ b/gui/scss/Light.scss
@@ -148,6 +148,7 @@ $project-dropdown-text-color: black;
 $fb-tab-title-color: black;
 
 $fb-table-row-bg: white;
+$fb-table-row-border: #f3f5f5;
 $fb-table-shadow: 1px 1px 5px #dedede;
 
 $sys-cmd-expanded-shadow: 3px 3px 5px -2px #dedede;
