--- a/gui/scss/Midnight.scss
+++ b/gui/scss/Midnight.scss
@@ -146,16 +146,12 @@ $project-dropdown-text-color: #f9f9f9;
 $fb-tab-title-color: white;
 
 $fb-table-row-bg: #3e4356;
+$fb-table-row-border: #2a2f42;
 $fb-table-shadow: none;
 
 $sys-cmd-expanded-shadow: none;
 
 $integration-row-bg: #2a2f42;
-
-.list-group-item {
-    background-color: #3E4356;
-    border: 1px solid #2a2f42;
-}
 
 // Import Core Styles
 @import './core/$importer';
