--- a/gui/scss/core/_bootstrap-overrides.scss
+++ b/gui/scss/core/_bootstrap-overrides.scss
@@ -188,10 +188,10 @@ textarea.form-control {
     }
 }
 
-.btn-danger:hover, 
-.btn-default:hover, 
-.btn-primary:hover, 
-.btn-secondary:hover, 
+.btn-danger:hover,
+.btn-default:hover,
+.btn-primary:hover,
+.btn-secondary:hover,
 .btn-success:hover {
     border-color: transparent;
 }
@@ -250,18 +250,18 @@ textarea.form-control {
     color: #12d0ff;
 }
 
-// Misc 
+// Misc
 
 .table-hover > tbody > tr:hover {
     background-color: $light-background-color;
 }
 .control-list:hover>td, .command-list:hover>td {
-    color: $content-text-color; 
+    color: $content-text-color;
 }
 
 .popover {
     border: 2px solid $dropdown-menu-border;
-    background-color: $dropdown-menu-bg; 
+    background-color: $dropdown-menu-bg;
     border-radius: 2px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.35);
 }
@@ -374,7 +374,7 @@ textarea.form-control {
 }
 
 .input-group .form-control {
-    z-index: 0; 
+    z-index: 0;
     float: none;
 }
 
@@ -486,7 +486,7 @@ label {
         }
     }
   }
-  
+
   .fb-tabs {
     margin: 0 10px;
     border-bottom: 0px solid #eaecec;
@@ -632,4 +632,9 @@ a {
     color: white;
     background-color: #888888;
     border-color: #2F3136;
+}
+
+.list-group-item {
+    background-color: $fb-table-row-bg;
+    border: 1px solid $fb-table-row-border;
 }
