--- a/gui/scss/core/_bootstrap-overrides.scss
+++ b/gui/scss/core/_bootstrap-overrides.scss
@@ -240,6 +240,10 @@ textarea.form-control {
     border-color: transparent;
 }
 
+.dropdown-toggle > .caret {
+    margin-left: 5px;
+}
+
 .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
     outline: none;
     outline-offset: 0;
