variable inspector work

--- a/gui/app/templates/_settings.html
+++ b/gui/app/templates/_settings.html
@@ -191,6 +191,17 @@
                 </label>
               </div>
             </div>
+
+            <div class="setting col-sm-6">
+              <div class="setting-heading">Variable Inspector</div>
+              <div class="setting-description">
+                adfadfs
+              </div>
+              <button class="btn btn-default" ng-click="openVariableInspector()">
+                Open Variable Inspector
+              </button>
+            </div>
+
           </div>
         </uib-tab>
 
