Add consistency in sort tag names

--- a/gui/app/templates/chat/_commands.html
+++ b/gui/app/templates/chat/_commands.html
@@ -105,7 +105,7 @@
               <th class="muted"><i class="fas fa-exclamation"></i> TRIGGER</th>
               <th class="muted"><i class="fas fa-clock"></i> COOLDOWNS</th>
               <th class="muted"><i class="fas fa-lock-alt"></i> PERMISSIONS</th>
-              <th class="muted"><i class="fas fa-tag"></i> TAGS</th>
+              <th class="muted"><i class="fas fa-tag"></i> SORT TAGS</th>
               <th></th>
               <th></th>
             </tr>
