finish variable inspector implementation

--- a/gui/app/templates/_settings.html
+++ b/gui/app/templates/_settings.html
@@ -191,17 +191,6 @@
                 </label>
               </div>
             </div>
-
-            <div class="setting col-sm-6">
-              <div class="setting-heading">Variable Inspector</div>
-              <div class="setting-description">
-                adfadfs
-              </div>
-              <button class="btn btn-default" ng-click="openVariableInspector()">
-                Open Variable Inspector
-              </button>
-            </div>
-
           </div>
         </uib-tab>
 
@@ -1016,6 +1005,22 @@
               </div>
             </div>
 
+            <div class="setting col-sm-6">
+              <div class="setting-heading">Custom Variable Inspector</div>
+              <div class="setting-description">
+                The Custom Variable Inspector allows you to watch custom
+                variable value changes in real-time for debugging purposes.
+              </div>
+              <button
+                class="btn btn-default"
+                ng-click="openVariableInspector()"
+              >
+                Open Variable Inspector
+              </button>
+            </div>
+          </div>
+
+          <div class="row" style="margin-top: 15px">
             <div class="setting col-sm-6">
               <div class="setting-heading">Allow Quote .CSV Export</div>
               <div class="setting-description">
