Add tooltip to test effects button

--- a/gui/app/templates/live-events/_events.html
+++ b/gui/app/templates/live-events/_events.html
@@ -278,6 +278,8 @@
                     <span
                       style="color: #16809c; font-size: 20px"
                       ng-click="fireEventManually(event)"
+                      uib-tooltip="Test Effects"
+                      tooltip-append-to-body="true"
                     >
                       <i class="fas fa-play-circle clickable"></i>
                     </span>
