--- a/gui/app/templates/chat/_commands.html
+++ b/gui/app/templates/chat/_commands.html
@@ -123,6 +123,8 @@
                 <span
                   style="color: #16809c; font-size: 20px"
                   ng-click="manuallyTriggerCommand(command.id)"
+                  uib-tooltip="Test Effects"
+                  tooltip-append-to-body="true"
                 >
                   <i class="fas fa-play-circle clickable"></i>
                 </span>
