Settings page redesign

--- a/gui/scss/Obsidian.scss
+++ b/gui/scss/Obsidian.scss
@@ -151,7 +151,7 @@ $fb-table-shadow: none;
 
 $sys-cmd-expanded-shadow: none;
 
-$integration-row-bg: #2f3136;
+$integration-row-bg: #3e4046;
 
 // Import Core Styles
 @import './core/$importer';
