--- a/gui/app/templates/live-events/_events.html
+++ b/gui/app/templates/live-events/_events.html
@@ -291,30 +291,7 @@
                     Type"}}
                   </td>
                   <td style="max-width: 135px; min-width: 100px">
-                    <div
-                      style="
-                        display: flex;
-                        flex-wrap: wrap;
-                        width: 100%;
-                        overflow: auto;
-                        max-height: 45.25px;
-                      "
-                    >
-                      <span
-                        ng-repeat="tagName in sts.getSortTagNames('events', event.sortTags)"
-                        style="
-                          background: gray;
-                          border-radius: 15px;
-                          padding: 1px 5px;
-                          margin-right: 2px;
-                          margin-bottom: 1px;
-                          font-size: 10px;
-                          line-height: 1.8;
-                        "
-                      >
-                        {{tagName}}
-                      </span>
-                    </div>
+                    <sort-tags-row item="event" context="'events'" on-update="eventsService.saveGroup(group); eventsService.saveMainEvents();"></sort-tags-row>
                   </td>
                   <td>
                     <div>
