--- a/gui/scss/core/_functions.scss
+++ b/gui/scss/core/_functions.scss
@@ -1,41 +1,16 @@
-@for $i from 1 through 100 {
-    .m-#{$i} {
-        margin: $i + px;
-    }
+$props: ("margin": "m", "padding": "p");
+$sides: ("top": "t", "right": "r", "bottom": "b", "left": "l");
 
-    .m-t-#{$i} {
-        margin-top: $i + px;
-    }
+@each $prop, $propAcr in $props {
+    @for $i from 1 through 100 {
+        .#{$propAcr}-#{$i} {
+            #{$prop}: $i + px;
+        }
 
-    .m-b-#{$i} {
-        margin-bottom: $i + px;
-    }
-
-    .m-l-#{$i} {
-        margin-left: $i + px;
-    }
-
-    .m-r-#{$i} {
-        margin-right: $i + px;
-    }
-
-    .p-#{$i} {
-        padding: $i + px;
-    }
-
-    .p-t-#{$i} {
-        padding-top: $i + px;
-    }
-
-    .p-b-#{$i} {
-        padding-bottom: $i + px;
-    }
-
-    .p-l-#{$i} {
-        padding-left: $i + px;
-    }
-
-    .p-r-#{$i} {
-        padding-right: $i + px;
+        @each $side, $sideAcr in $sides {
+            .#{$propAcr}-#{$sideAcr}-#{$i} {
+                #{$prop}-#{$side}: $i + px;
+            }
+        }
     }
 }
