Update the spacing classes generator with rem values

--- a/gui/scss/core/_$importer.scss
+++ b/gui/scss/core/_$importer.scss
@@ -6,7 +6,6 @@
 
 // Custom
 @import 'global';
-@import 'functions';
 @import 'firebot-item-table';
 @import 'groups';
 @import 'moderation';
@@ -21,3 +20,4 @@
 @import 'bootstrap-overrides';
 @import 'title-bar';
 @import 'modals';
+@import 'spacing';
